Atualização do painel de instruções

--- a/projeto/fase1/fase1.html
+++ b/projeto/fase1/fase1.html
@@ -43,7 +43,7 @@
               <h1 id="count">0</h1>
             </div>
             <div class="nomejogador">
-              <h1 id="name">Jogador</h1>
+              <h1 id="name"></h1>
             </div>
           </div>
         </div>
